--- a/robomatics.html
+++ b/robomatics.html
@@ -110,17 +110,17 @@ img {
     <div class="slideshow-container">
         <div class="mySlides fade" style="text-align: center;">
             <div class="numbertext">1 / 3</div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4Gyw6raVB5suQRaOGnUDmKonPbai29SRDzHga_StgIB96fY3HipJsIuQgToY7VX8USRk&usqp=CAU" style="width:15%" >
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4Gyw6raVB5suQRaOGnUDmKonPbai29SRDzHga_StgIB96fY3HipJsIuQgToY7VX8USRk&usqp=CAU" style="width:15px" >
             <div class="text">Caption Text</div>
         </div>
         <div class="mySlides fade"style="text-align: center;">
             <div class="numbertext">2 / 3</div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZLEabcmyEKJQcadVnDYrweROBhdVIrlcseUl4wEI4Y5_9ZsjTKh5-Y6SgBQBe8iTl8WA&usqp=CAU" style="width:15%" >
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZLEabcmyEKJQcadVnDYrweROBhdVIrlcseUl4wEI4Y5_9ZsjTKh5-Y6SgBQBe8iTl8WA&usqp=CAU" style="width:15px" >
             <div class="text">Caption Two</div>
         </div>
         <div class="mySlides fade" style="text-align: center;">
             <div class="numbertext" >3 / 3</div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUVJXZLv3oBsvg7QJQPMHhbuD9SYwimlUBrgkJKmCw78aDgl29tJbG44wCcbyoEM4E-YQ&usqp=CAU" style="width:15%">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUVJXZLv3oBsvg7QJQPMHhbuD9SYwimlUBrgkJKmCw78aDgl29tJbG44wCcbyoEM4E-YQ&usqp=CAU" style="width:15px">
             <div class="text">Caption Three</div>
         </div>
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
