--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ img {
     <div class="slideshow-container">
         <div class="mySlides fade" style="text-align: center;">
             <div class="numbertext">1 / 3</div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4Gyw6raVB5suQRaOGnUDmKonPbai29SRDzHga_StgIB96fY3HipJsIuQgToY7VX8USRk&usqp=CAU" style="width:57%" >
+            <img src="image1.png" style="width:57%" >
             <div class="text">Caption Text</div>
         </div>
         <div class="mySlides fade"style="text-align: center;">
